crates/rome_console/tests/markup/element_non_ident_name.stderr
error: unexpected token
 --> tests/markup/element_non_ident_name.rs:3:10
  |
3 |         <"Literal" />
  |          ^^^^^^^^^
